## 0.0.42-SNAPSHOT (will be deployed) *Added -more useful methods to the Option type. -reduce method to Kollection -nullThenGet method to Objects *Changed -test code refactored