@@ -31,10 +31,9 @@
  */
 package org.elixirian.kommonlee.util;
 
+import static org.assertj.core.api.Assertions.*;
 import static org.elixirian.kommonlee.test.CommonTestHelper.*;
 import static org.elixirian.kommonlee.util.MessageFormatter.*;
-import static org.hamcrest.CoreMatchers.*;
-import static org.junit.Assert.*;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -43,6 +42,8 @@ import java.util.Date;
 
 import org.elixirian.kommonlee.test.CauseCheckableExpectedException;
 import org.elixirian.kommonlee.test.CommonTestHelper.Accessibility;
+import org.elixirian.kommonlee.type.Suppliable;
+import org.hamcrest.CoreMatchers;
 import org.junit.Rule;
 import org.junit.Test;
 
@@ -110,11 +111,11 @@ public class ObjectsTest
   {
     for (int i = Byte.MIN_VALUE, size = Byte.MAX_VALUE; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.equal((byte) i, (byte) i)), is(equalTo(Boolean.TRUE)));
+      assertThat(Objects.equal((byte) i, (byte) i)).isTrue();
     }
     for (int i = Byte.MIN_VALUE, size = Byte.MAX_VALUE - 1; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.equal((byte) i, (byte) (i + 1))), is(equalTo(Boolean.FALSE)));
+      assertThat(Objects.equal((byte) i, (byte) (i + 1))).isEqualTo(Boolean.FALSE);
     }
   }
 
@@ -123,11 +124,11 @@ public class ObjectsTest
   {
     for (int i = Character.MIN_VALUE, size = Character.MAX_VALUE; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.equal((char) i, (char) i)), is(equalTo(Boolean.TRUE)));
+      assertThat(Objects.equal((char) i, (char) i)).isEqualTo(Boolean.TRUE);
     }
     for (int i = Character.MIN_VALUE, size = Character.MAX_VALUE - 1; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.equal((char) i, (char) (i + 1))), is(equalTo(Boolean.FALSE)));
+      assertThat(Objects.equal((char) i, (char) (i + 1))).isEqualTo(Boolean.FALSE);
     }
   }
 
@@ -136,11 +137,11 @@ public class ObjectsTest
   {
     for (int i = Short.MIN_VALUE, size = Short.MAX_VALUE; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.equal((short) i, (short) i)), is(equalTo(Boolean.TRUE)));
+      assertThat(Objects.equal((short) i, (short) i)).isEqualTo(Boolean.TRUE);
     }
     for (int i = Short.MIN_VALUE, size = Short.MAX_VALUE - 1; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.equal((short) i, (short) (i + 1))), is(equalTo(Boolean.FALSE)));
+      assertThat(Objects.equal((short) i, (short) (i + 1))).isEqualTo(Boolean.FALSE);
     }
   }
 
@@ -149,11 +150,11 @@ public class ObjectsTest
   {
     for (int i = Short.MIN_VALUE, size = Short.MAX_VALUE; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.equal(i, i)), is(equalTo(Boolean.TRUE)));
+      assertThat(Objects.equal(i, i)).isEqualTo(Boolean.TRUE);
     }
     for (int i = Short.MIN_VALUE, size = Short.MAX_VALUE - 1; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.equal(i, i + 1)), is(equalTo(Boolean.FALSE)));
+      assertThat(Objects.equal(i, i + 1)).isEqualTo(Boolean.FALSE);
     }
   }
 
@@ -162,11 +163,11 @@ public class ObjectsTest
   {
     for (long i = Short.MIN_VALUE, size = Short.MAX_VALUE; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.equal(i, i)), is(equalTo(Boolean.TRUE)));
+      assertThat(Objects.equal(i, i)).isEqualTo(Boolean.TRUE);
     }
     for (long i = Short.MIN_VALUE, size = Short.MAX_VALUE - 1; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.equal(i, i + 1)), is(equalTo(Boolean.FALSE)));
+      assertThat(Objects.equal(i, i + 1)).isEqualTo(Boolean.FALSE);
     }
   }
 
@@ -175,11 +176,11 @@ public class ObjectsTest
   {
     for (int i = Short.MIN_VALUE, size = Short.MAX_VALUE; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.equal(i + 0.50F, i + 0.50F)), is(equalTo(Boolean.TRUE)));
+      assertThat(Objects.equal(i + 0.50F, i + 0.50F)).isEqualTo(Boolean.TRUE);
     }
     for (int i = Short.MIN_VALUE, size = Short.MAX_VALUE - 1; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.equal(i + 0.50F, i + 0.50F + 1)), is(equalTo(Boolean.FALSE)));
+      assertThat(Objects.equal(i + 0.50F, i + 0.50F + 1)).isEqualTo(Boolean.FALSE);
     }
   }
 
@@ -188,135 +189,123 @@ public class ObjectsTest
   {
     for (int i = Short.MIN_VALUE, size = Short.MAX_VALUE; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.equal(i + 0.1234D, i + 0.1234D)), is(equalTo(Boolean.TRUE)));
+      assertThat(Objects.equal(i + 0.1234D, i + 0.1234D)).isEqualTo(Boolean.TRUE);
     }
     for (int i = Short.MIN_VALUE, size = Short.MAX_VALUE - 1; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.equal(i + 0.1234D, i + 0.1234D + 1)), is(equalTo(Boolean.FALSE)));
+      assertThat(Objects.equal(i + 0.1234D, i + 0.1234D + 1)).isEqualTo(Boolean.FALSE);
     }
   }
 
   @Test
   public final void testEqualBooleanBoolean()
   {
-    assertThat(Boolean.valueOf(Objects.equal(false, false)), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.equal(false, true)), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(true, false)), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(true, true)), is(equalTo(Boolean.TRUE)));
+    assertThat(Objects.equal(false, false)).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.equal(false, true)).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(true, false)).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(true, true)).isEqualTo(Boolean.TRUE);
   }
 
   @Test
   public final void testEqualObjectObject()
   {
-    assertThat(Boolean.valueOf(Objects.equal(null, null)), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.equal("", "")), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.equal("test", "test")), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.equal(new String("1234"), new String("1234"))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.equal(new SomeObject("Kevin"), new SomeObject("Kevin"))),
-        is(equalTo(Boolean.TRUE)));
+    assertThat(Objects.equal(null, null)).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.equal("", "")).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.equal("test", "test")).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.equal(new String("1234"), new String("1234"))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.equal(new SomeObject("Kevin"), new SomeObject("Kevin"))).isEqualTo(Boolean.TRUE);
 
-    assertThat(Boolean.valueOf(Objects.equal(Boolean.TRUE, Boolean.TRUE)), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Byte((byte) 11), new Byte((byte) 11))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Short((short) 100), new Short((short) 100))),
-        is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Integer(999), new Integer(999))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Long(99999), new Long(99999))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Character('a'), new Character('a'))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Float(1.12F), new Float(1.12F))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Double(123.99123D), new Double(123.99123D))),
-        is(equalTo(Boolean.TRUE)));
+    assertThat(Objects.equal(Boolean.TRUE, Boolean.TRUE)).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.equal(new Byte((byte) 11), new Byte((byte) 11))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.equal(new Short((short) 100), new Short((short) 100))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.equal(new Integer(999), new Integer(999))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.equal(new Long(99999), new Long(99999))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.equal(new Character('a'), new Character('a'))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.equal(new Float(1.12F), new Float(1.12F))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.equal(new Double(123.99123D), new Double(123.99123D))).isEqualTo(Boolean.TRUE);
 
-    assertThat(Boolean.valueOf(Objects.equal(null, new Object())), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal("", "1")), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal("test1", "test2")), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(new String("1234"), new String("4321"))), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(new SomeObject("Kevin"), new SomeObject("Lee"))),
-        is(equalTo(Boolean.FALSE)));
+    assertThat(Objects.equal(null, new Object())).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal("", "1")).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal("test1", "test2")).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(new String("1234"), new String("4321"))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(new SomeObject("Kevin"), new SomeObject("Lee"))).isEqualTo(Boolean.FALSE);
 
-    assertThat(Boolean.valueOf(Objects.equal(null, Boolean.TRUE)), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(null, new Byte((byte) 11))), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(null, new Short((short) 100))), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(null, new Integer(999))), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(null, new Long(99999))), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(null, new Character('a'))), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(null, new Float(1.12F))), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(null, new Double(123.99123D))), is(equalTo(Boolean.FALSE)));
+    assertThat(Objects.equal(null, Boolean.TRUE)).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(null, new Byte((byte) 11))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(null, new Short((short) 100))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(null, new Integer(999))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(null, new Long(99999))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(null, new Character('a'))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(null, new Float(1.12F))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(null, new Double(123.99123D))).isEqualTo(Boolean.FALSE);
 
-    assertThat(Boolean.valueOf(Objects.equal(Boolean.TRUE, null)), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Byte((byte) 11), null)), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Short((short) 100), null)), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Integer(999), null)), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Long(99999), null)), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Character('a'), null)), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Float(1.12F), null)), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Double(123.99123D), null)), is(equalTo(Boolean.FALSE)));
+    assertThat(Objects.equal(Boolean.TRUE, null)).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(new Byte((byte) 11), null)).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(new Short((short) 100), null)).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(new Integer(999), null)).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(new Long(99999), null)).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(new Character('a'), null)).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(new Float(1.12F), null)).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(new Double(123.99123D), null)).isEqualTo(Boolean.FALSE);
 
-    assertThat(Boolean.valueOf(Objects.equal(Boolean.TRUE, Boolean.FALSE)), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Byte((byte) 11), new Byte((byte) 5))), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Short((short) 100), new Short((short) 50))),
-        is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Integer(999), new Integer(333))), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Long(99999), new Long(33333))), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Character('a'), new Character('z'))), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Float(1.12F), new Float(8.88F))), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.equal(new Double(123.99123D), new Double(555.1234D))),
-        is(equalTo(Boolean.FALSE)));
+    assertThat(Objects.equal(Boolean.TRUE, Boolean.FALSE)).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(new Byte((byte) 11), new Byte((byte) 5))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(new Short((short) 100), new Short((short) 50))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(new Integer(999), new Integer(333))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(new Long(99999), new Long(33333))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(new Character('a'), new Character('z'))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(new Float(1.12F), new Float(8.88F))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.equal(new Double(123.99123D), new Double(555.1234D))).isEqualTo(Boolean.FALSE);
   }
 
   @Test
   public final void testDeepEqual()
   {
-    assertThat(Boolean.valueOf(Objects.deepEqual(null, null)), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.deepEqual("", "")), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.deepEqual("test", "test")), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.deepEqual(new String("1234"), new String("1234"))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.deepEqual(new SomeObject("Kevin"), new SomeObject("Kevin"))),
-        is(equalTo(Boolean.TRUE)));
+    assertThat(Objects.deepEqual(null, null)).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.deepEqual("", "")).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.deepEqual("test", "test")).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.deepEqual(new String("1234"), new String("1234"))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.deepEqual(new SomeObject("Kevin"), new SomeObject("Kevin"))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.deepEqual(new String[] { "Hello", "Kevin", "Lee" }, new String[] { "Hello", "Kevin", "Lee" })).isEqualTo(
+        Boolean.TRUE);
     assertThat(
-        Boolean.valueOf(Objects.deepEqual(new String[] { "Hello", "Kevin", "Lee" }, new String[] { "Hello", "Kevin",
-            "Lee" })), is(equalTo(Boolean.TRUE)));
-    assertThat(
-        Boolean.valueOf(Objects.deepEqual(new String[][] { new String[] { "Hello", "Kevin", "Lee" },
+        Objects.deepEqual(new String[][] { new String[] { "Hello", "Kevin", "Lee" },
             new String[] { "Goodbye", "See you", "Later" } }, new String[][] {
-            new String[] { "Hello", "Kevin", "Lee" }, new String[] { "Goodbye", "See you", "Later" } })),
-        is(equalTo(Boolean.TRUE)));
+            new String[] { "Hello", "Kevin", "Lee" }, new String[] { "Goodbye", "See you", "Later" } })).isEqualTo(
+        Boolean.TRUE);
     assertThat(
-        Boolean.valueOf(Objects.deepEqual(new SomeObject[] { new SomeObject("Kevin"), new SomeObject("Lee"),
+        Objects.deepEqual(new SomeObject[] { new SomeObject("Kevin"), new SomeObject("Lee"),
             new SomeObject("SeongHyun") }, new SomeObject[] { new SomeObject("Kevin"), new SomeObject("Lee"),
-            new SomeObject("SeongHyun") })), is(equalTo(Boolean.TRUE)));
+            new SomeObject("SeongHyun") })).isEqualTo(Boolean.TRUE);
 
-    assertThat(Boolean.valueOf(Objects.deepEqual(null, new Object())), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.deepEqual("", "1")), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.deepEqual("test1", "test2")), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.deepEqual(new String("1234"), new String("4321"))), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.deepEqual(new SomeObject("Kevin"), new SomeObject("Tom"))),
-        is(equalTo(Boolean.FALSE)));
+    assertThat(Objects.deepEqual(null, new Object())).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.deepEqual("", "1")).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.deepEqual("test1", "test2")).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.deepEqual(new String("1234"), new String("4321"))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.deepEqual(new SomeObject("Kevin"), new SomeObject("Tom"))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.deepEqual(new String[] { "Hello", "Lee", "Kevin" }, new String[] { "Hello", "Kevin", "Lee" })).isEqualTo(
+        Boolean.FALSE);
     assertThat(
-        Boolean.valueOf(Objects.deepEqual(new String[] { "Hello", "Lee", "Kevin" }, new String[] { "Hello", "Kevin",
-            "Lee" })), is(equalTo(Boolean.FALSE)));
-    assertThat(
-        Boolean.valueOf(Objects.deepEqual(new String[][] { new String[] { "Hello", "Kevin", "Lee" },
+        Objects.deepEqual(new String[][] { new String[] { "Hello", "Kevin", "Lee" },
             new String[] { "Goodbye", "See you", "Later!" } }, new String[][] {
-            new String[] { "Hello", "Kevin", "Lee" }, new String[] { "Goodbye", "See you", "Later" } })),
-        is(equalTo(Boolean.FALSE)));
+            new String[] { "Hello", "Kevin", "Lee" }, new String[] { "Goodbye", "See you", "Later" } })).isEqualTo(
+        Boolean.FALSE);
     assertThat(
-        Boolean.valueOf(Objects.deepEqual(new SomeObject[] { new SomeObject("SeongHyun"), new SomeObject("Lee"),
+        Objects.deepEqual(new SomeObject[] { new SomeObject("SeongHyun"), new SomeObject("Lee"),
             new SomeObject("Kevin") }, new SomeObject[] { new SomeObject("Kevin"), new SomeObject("Lee"),
-            new SomeObject("SeongHyun") })), is(equalTo(Boolean.FALSE)));
+            new SomeObject("SeongHyun") })).isEqualTo(Boolean.FALSE);
 
-    assertThat(Boolean.valueOf(Objects.deepEqual(new int[] { 1, 2, 3, 4, 5 }, new int[] { 1, 2, 3, 4, 5 })),
-        is(equalTo(Boolean.TRUE)));
-
-    assertThat(
-        Boolean.valueOf(Objects.deepEqual(new boolean[] { true, true, false, true, false }, new boolean[] { true, true,
-            false, true, false })), is(equalTo(Boolean.TRUE)));
-
-    assertThat(Boolean.valueOf(Objects.deepEqual(new int[] { 1, 2, 3, 4, 5 }, new int[] { 1, 2, 3, 4, 6 })),
-        is(equalTo(Boolean.FALSE)));
+    assertThat(Objects.deepEqual(new int[] { 1, 2, 3, 4, 5 }, new int[] { 1, 2, 3, 4, 5 })).isEqualTo(Boolean.TRUE);
 
     assertThat(
-        Boolean.valueOf(Objects.deepEqual(new boolean[] { true, true, false, true, false }, new boolean[] { true, true,
-            false, true, true })), is(equalTo(Boolean.FALSE)));
+        Objects.deepEqual(new boolean[] { true, true, false, true, false }, new boolean[] { true, true, false, true,
+            false })).isEqualTo(Boolean.TRUE);
+
+    assertThat(Objects.deepEqual(new int[] { 1, 2, 3, 4, 5 }, new int[] { 1, 2, 3, 4, 6 })).isEqualTo(Boolean.FALSE);
+
+    assertThat(
+        Objects.deepEqual(new boolean[] { true, true, false, true, false }, new boolean[] { true, true, false, true,
+            true })).isEqualTo(Boolean.FALSE);
   }
 
   @Test
@@ -324,11 +313,11 @@ public class ObjectsTest
   {
     for (int i = Byte.MIN_VALUE, size = Byte.MAX_VALUE; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.notEqual((byte) i, (byte) i)), is(equalTo(Boolean.FALSE)));
+      assertThat(Objects.notEqual((byte) i, (byte) i)).isEqualTo(Boolean.FALSE);
     }
     for (int i = Byte.MIN_VALUE, size = Byte.MAX_VALUE - 1; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.notEqual((byte) i, (byte) (i + 1))), is(equalTo(Boolean.TRUE)));
+      assertThat(Objects.notEqual((byte) i, (byte) (i + 1))).isEqualTo(Boolean.TRUE);
     }
   }
 
@@ -337,11 +326,11 @@ public class ObjectsTest
   {
     for (int i = Character.MIN_VALUE, size = Character.MAX_VALUE; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.notEqual((char) i, (char) i)), is(equalTo(Boolean.FALSE)));
+      assertThat(Objects.notEqual((char) i, (char) i)).isEqualTo(Boolean.FALSE);
     }
     for (int i = Character.MIN_VALUE, size = Character.MAX_VALUE - 1; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.notEqual((char) i, (char) (i + 1))), is(equalTo(Boolean.TRUE)));
+      assertThat(Objects.notEqual((char) i, (char) (i + 1))).isEqualTo(Boolean.TRUE);
     }
   }
 
@@ -350,11 +339,11 @@ public class ObjectsTest
   {
     for (int i = Short.MIN_VALUE, size = Short.MAX_VALUE; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.notEqual((short) i, (short) i)), is(equalTo(Boolean.FALSE)));
+      assertThat(Objects.notEqual((short) i, (short) i)).isEqualTo(Boolean.FALSE);
     }
     for (int i = Short.MIN_VALUE, size = Short.MAX_VALUE - 1; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.notEqual((short) i, (short) (i + 1))), is(equalTo(Boolean.TRUE)));
+      assertThat(Objects.notEqual((short) i, (short) (i + 1))).isEqualTo(Boolean.TRUE);
     }
   }
 
@@ -363,11 +352,11 @@ public class ObjectsTest
   {
     for (int i = Short.MIN_VALUE, size = Short.MAX_VALUE; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.notEqual(i, i)), is(equalTo(Boolean.FALSE)));
+      assertThat(Objects.notEqual(i, i)).isEqualTo(Boolean.FALSE);
     }
     for (int i = Short.MIN_VALUE, size = Short.MAX_VALUE - 1; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.notEqual(i, i + 1)), is(equalTo(Boolean.TRUE)));
+      assertThat(Objects.notEqual(i, i + 1)).isEqualTo(Boolean.TRUE);
     }
   }
 
@@ -376,11 +365,11 @@ public class ObjectsTest
   {
     for (long i = Short.MIN_VALUE, size = Short.MAX_VALUE; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.notEqual(i, i)), is(equalTo(Boolean.FALSE)));
+      assertThat(Objects.notEqual(i, i)).isEqualTo(Boolean.FALSE);
     }
     for (long i = Short.MIN_VALUE, size = Short.MAX_VALUE - 1; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.notEqual(i, i + 1)), is(equalTo(Boolean.TRUE)));
+      assertThat(Objects.notEqual(i, i + 1)).isEqualTo(Boolean.TRUE);
     }
   }
 
@@ -389,11 +378,11 @@ public class ObjectsTest
   {
     for (int i = Short.MIN_VALUE, size = Short.MAX_VALUE; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.notEqual(i + 0.50F, i + 0.50F)), is(equalTo(Boolean.FALSE)));
+      assertThat(Objects.notEqual(i + 0.50F, i + 0.50F)).isEqualTo(Boolean.FALSE);
     }
     for (int i = Short.MIN_VALUE, size = Short.MAX_VALUE - 1; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.notEqual(i + 0.50F, i + 0.50F + 1)), is(equalTo(Boolean.TRUE)));
+      assertThat(Objects.notEqual(i + 0.50F, i + 0.50F + 1)).isEqualTo(Boolean.TRUE);
     }
   }
 
@@ -402,171 +391,146 @@ public class ObjectsTest
   {
     for (int i = Short.MIN_VALUE, size = Short.MAX_VALUE; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.notEqual(i + 0.1234D, i + 0.1234D)), is(equalTo(Boolean.FALSE)));
+      assertThat(Objects.notEqual(i + 0.1234D, i + 0.1234D)).isEqualTo(Boolean.FALSE);
     }
     for (int i = Short.MIN_VALUE, size = Short.MAX_VALUE - 1; i < size; i++)
     {
-      assertThat(Boolean.valueOf(Objects.notEqual(i + 0.1234D, i + 0.1234D + 1)), is(equalTo(Boolean.TRUE)));
+      assertThat(Objects.notEqual(i + 0.1234D, i + 0.1234D + 1)).isEqualTo(Boolean.TRUE);
     }
   }
 
   @Test
   public final void testNotEqualBooleanBoolean()
   {
-    assertThat(Boolean.valueOf(Objects.notEqual(false, false)), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(false, true)), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(true, false)), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(true, true)), is(equalTo(Boolean.FALSE)));
+    assertThat(Objects.notEqual(false, false)).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.notEqual(false, true)).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(true, false)).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(true, true)).isEqualTo(Boolean.FALSE);
   }
 
   @Test
   public final void testNotEqualObjectObject()
   {
-    assertThat(Boolean.valueOf(Objects.notEqual(null, null)), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.notEqual("", "")), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.notEqual("test", "test")), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new String("1234"), new String("1234"))), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new SomeObject("Kevin"), new SomeObject("Kevin"))),
-        is(equalTo(Boolean.FALSE)));
+    assertThat(Objects.notEqual(null, null)).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.notEqual("", "")).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.notEqual("test", "test")).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.notEqual(new String("1234"), new String("1234"))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.notEqual(new SomeObject("Kevin"), new SomeObject("Kevin"))).isEqualTo(Boolean.FALSE);
 
-    assertThat(Boolean.valueOf(Objects.notEqual(Boolean.TRUE, Boolean.TRUE)), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Byte((byte) 11), new Byte((byte) 11))), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Short((short) 100), new Short((short) 100))),
-        is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Integer(999), new Integer(999))), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Long(99999), new Long(99999))), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Character('a'), new Character('a'))), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Float(1.12F), new Float(1.12F))), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Double(123.99123D), new Double(123.99123D))),
-        is(equalTo(Boolean.FALSE)));
+    assertThat(Objects.notEqual(Boolean.TRUE, Boolean.TRUE)).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.notEqual(new Byte((byte) 11), new Byte((byte) 11))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.notEqual(new Short((short) 100), new Short((short) 100))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.notEqual(new Integer(999), new Integer(999))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.notEqual(new Long(99999), new Long(99999))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.notEqual(new Character('a'), new Character('a'))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.notEqual(new Float(1.12F), new Float(1.12F))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.notEqual(new Double(123.99123D), new Double(123.99123D))).isEqualTo(Boolean.FALSE);
 
-    assertThat(Boolean.valueOf(Objects.notEqual(null, new Object())), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual("", "1")), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual("test1", "test2")), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new String("1234"), new String("4321"))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new SomeObject("Kevin"), new SomeObject("Lee"))),
-        is(equalTo(Boolean.TRUE)));
+    assertThat(Objects.notEqual(null, new Object())).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual("", "1")).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual("test1", "test2")).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(new String("1234"), new String("4321"))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(new SomeObject("Kevin"), new SomeObject("Lee"))).isEqualTo(Boolean.TRUE);
 
-    assertThat(Boolean.valueOf(Objects.notEqual(null, Boolean.TRUE)), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(null, new Byte((byte) 11))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(null, new Short((short) 100))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(null, new Integer(999))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(null, new Long(99999))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(null, new Character('a'))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(null, new Float(1.12F))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(null, new Double(123.99123D))), is(equalTo(Boolean.TRUE)));
+    assertThat(Objects.notEqual(null, Boolean.TRUE)).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(null, new Byte((byte) 11))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(null, new Short((short) 100))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(null, new Integer(999))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(null, new Long(99999))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(null, new Character('a'))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(null, new Float(1.12F))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(null, new Double(123.99123D))).isEqualTo(Boolean.TRUE);
 
-    assertThat(Boolean.valueOf(Objects.notEqual(Boolean.TRUE, null)), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Byte((byte) 11), null)), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Short((short) 100), null)), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Integer(999), null)), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Long(99999), null)), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Character('a'), null)), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Float(1.12F), null)), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Double(123.99123D), null)), is(equalTo(Boolean.TRUE)));
+    assertThat(Objects.notEqual(Boolean.TRUE, null)).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(new Byte((byte) 11), null)).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(new Short((short) 100), null)).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(new Integer(999), null)).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(new Long(99999), null)).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(new Character('a'), null)).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(new Float(1.12F), null)).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(new Double(123.99123D), null)).isEqualTo(Boolean.TRUE);
 
-    assertThat(Boolean.valueOf(Objects.notEqual(Boolean.TRUE, Boolean.FALSE)), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Byte((byte) 11), new Byte((byte) 5))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Short((short) 100), new Short((short) 50))),
-        is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Integer(999), new Integer(333))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Long(99999), new Long(33333))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Character('a'), new Character('z'))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Float(1.12F), new Float(8.88F))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notEqual(new Double(123.99123D), new Double(555.1234D))),
-        is(equalTo(Boolean.TRUE)));
+    assertThat(Objects.notEqual(Boolean.TRUE, Boolean.FALSE)).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(new Byte((byte) 11), new Byte((byte) 5))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(new Short((short) 100), new Short((short) 50))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(new Integer(999), new Integer(333))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(new Long(99999), new Long(33333))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(new Character('a'), new Character('z'))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(new Float(1.12F), new Float(8.88F))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notEqual(new Double(123.99123D), new Double(555.1234D))).isEqualTo(Boolean.TRUE);
   }
 
   @Test
   public final void testNotDeepEqual()
   {
-    assertThat(Boolean.valueOf(Objects.notDeepEqual(null, null)), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.notDeepEqual("", "")), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.notDeepEqual("test", "test")), is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.notDeepEqual(new String("1234"), new String("1234"))),
-        is(equalTo(Boolean.FALSE)));
-    assertThat(Boolean.valueOf(Objects.notDeepEqual(new SomeObject("Kevin"), new SomeObject("Kevin"))),
-        is(equalTo(Boolean.FALSE)));
+    assertThat(Objects.notDeepEqual(null, null)).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.notDeepEqual("", "")).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.notDeepEqual("test", "test")).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.notDeepEqual(new String("1234"), new String("1234"))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.notDeepEqual(new SomeObject("Kevin"), new SomeObject("Kevin"))).isEqualTo(Boolean.FALSE);
+    assertThat(Objects.notDeepEqual(new String[] { "Hello", "Kevin", "Lee" }, new String[] { "Hello", "Kevin", "Lee" })).isEqualTo(
+        Boolean.FALSE);
     assertThat(
-        Boolean.valueOf(Objects.notDeepEqual(new String[] { "Hello", "Kevin", "Lee" }, new String[] { "Hello", "Kevin",
-            "Lee" })), is(equalTo(Boolean.FALSE)));
-    assertThat(
-        Boolean.valueOf(Objects.notDeepEqual(new SomeObject[] { new SomeObject("Kevin"), new SomeObject("Lee"),
+        Objects.notDeepEqual(new SomeObject[] { new SomeObject("Kevin"), new SomeObject("Lee"),
             new SomeObject("SeongHyun") }, new SomeObject[] { new SomeObject("Kevin"), new SomeObject("Lee"),
-            new SomeObject("SeongHyun") })), is(equalTo(Boolean.FALSE)));
+            new SomeObject("SeongHyun") })).isEqualTo(Boolean.FALSE);
 
-    assertThat(Boolean.valueOf(Objects.notDeepEqual(null, new Object())), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notDeepEqual("", "1")), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notDeepEqual("test1", "test2")), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notDeepEqual(new String("1234"), new String("4321"))), is(equalTo(Boolean.TRUE)));
-    assertThat(Boolean.valueOf(Objects.notDeepEqual(new SomeObject("Kevin"), new SomeObject("Tom"))),
-        is(equalTo(Boolean.TRUE)));
+    assertThat(Objects.notDeepEqual(null, new Object())).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notDeepEqual("", "1")).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notDeepEqual("test1", "test2")).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notDeepEqual(new String("1234"), new String("4321"))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notDeepEqual(new SomeObject("Kevin"), new SomeObject("Tom"))).isEqualTo(Boolean.TRUE);
+    assertThat(Objects.notDeepEqual(new String[] { "Hello", "Lee", "Kevin" }, new String[] { "Hello", "Kevin", "Lee" })).isEqualTo(
+        Boolean.TRUE);
     assertThat(
-        Boolean.valueOf(Objects.notDeepEqual(new String[] { "Hello", "Lee", "Kevin" }, new String[] { "Hello", "Kevin",
-            "Lee" })), is(equalTo(Boolean.TRUE)));
-    assertThat(
-        Boolean.valueOf(Objects.notDeepEqual(new SomeObject[] { new SomeObject("SeongHyun"), new SomeObject("Lee"),
+        Objects.notDeepEqual(new SomeObject[] { new SomeObject("SeongHyun"), new SomeObject("Lee"),
             new SomeObject("Kevin") }, new SomeObject[] { new SomeObject("Kevin"), new SomeObject("Lee"),
-            new SomeObject("SeongHyun") })), is(equalTo(Boolean.TRUE)));
+            new SomeObject("SeongHyun") })).isEqualTo(Boolean.TRUE);
 
-    assertThat(Boolean.valueOf(Objects.notDeepEqual(new int[] { 1, 2, 3, 4, 5 }, new int[] { 1, 2, 3, 4, 6 })),
-        is(equalTo(Boolean.TRUE)));
-
-    assertThat(
-        Boolean.valueOf(Objects.notDeepEqual(new boolean[] { true, true, false, true, false }, new boolean[] { true,
-            true, false, true, true })), is(equalTo(Boolean.TRUE)));
-
-    assertThat(Boolean.valueOf(Objects.notDeepEqual(new int[] { 1, 2, 3, 4, 5 }, new int[] { 1, 2, 3, 4, 5 })),
-        is(equalTo(Boolean.FALSE)));
+    assertThat(Objects.notDeepEqual(new int[] { 1, 2, 3, 4, 5 }, new int[] { 1, 2, 3, 4, 6 })).isEqualTo(Boolean.TRUE);
 
     assertThat(
-        Boolean.valueOf(Objects.notDeepEqual(new boolean[] { true, true, false, true, false }, new boolean[] { true,
-            true, false, true, false })), is(equalTo(Boolean.FALSE)));
+        Objects.notDeepEqual(new boolean[] { true, true, false, true, false }, new boolean[] { true, true, false, true,
+            true })).isEqualTo(Boolean.TRUE);
+
+    assertThat(Objects.notDeepEqual(new int[] { 1, 2, 3, 4, 5 }, new int[] { 1, 2, 3, 4, 5 })).isEqualTo(Boolean.FALSE);
+
+    assertThat(
+        Objects.notDeepEqual(new boolean[] { true, true, false, true, false }, new boolean[] { true, true, false, true,
+            false })).isEqualTo(Boolean.FALSE);
   }
 
   @Test
   public final void testHashCodeOfObject()
   {
-    assertThat(Integer.valueOf(Objects.hashCodeOf((byte) 64)), is(equalTo(Integer.valueOf(64))));
-    assertThat(Integer.valueOf(Objects.hashCodeOf((short) (Byte.MAX_VALUE + 10))),
-        is(equalTo(Integer.valueOf(Byte.MAX_VALUE + 10))));
-    assertThat(Integer.valueOf(Objects.hashCodeOf((char) (Character.MAX_VALUE - 100))),
-        is(equalTo(Integer.valueOf(Character.MAX_VALUE - 100))));
-    assertThat(Integer.valueOf(Objects.hashCodeOf(Short.MAX_VALUE + 1000)),
-        is(equalTo(Integer.valueOf(Short.MAX_VALUE + 1000))));
-    assertThat(Integer.valueOf(Objects.hashCodeOf(Integer.MAX_VALUE + 1000L)),
-        is(equalTo(Integer.valueOf((int) ((Integer.MAX_VALUE + 1000L) ^ ((Integer.MAX_VALUE + 1000L) >>> 32))))));
-    assertThat(Integer.valueOf(Objects.hashCodeOf(10.10F)), is(equalTo(Integer.valueOf(Float.floatToIntBits(10.10F)))));
+    assertThat(Objects.hashCodeOf((byte) 64)).isEqualTo(64);
+    assertThat(Objects.hashCodeOf((short) (Byte.MAX_VALUE + 10))).isEqualTo(Byte.MAX_VALUE + 10);
+    assertThat(Objects.hashCodeOf((char) (Character.MAX_VALUE - 100))).isEqualTo(Character.MAX_VALUE - 100);
+    assertThat(Objects.hashCodeOf(Short.MAX_VALUE + 1000)).isEqualTo(Short.MAX_VALUE + 1000);
+    assertThat(Objects.hashCodeOf(Integer.MAX_VALUE + 1000L)).isEqualTo(
+        (int) ((Integer.MAX_VALUE + 1000L) ^ ((Integer.MAX_VALUE + 1000L) >>> 32)));
+    assertThat(Objects.hashCodeOf(10.10F)).isEqualTo(Float.floatToIntBits(10.10F));
     final long longBits = Double.doubleToLongBits(Float.MAX_VALUE + 100.1234D);
-    assertThat(Integer.valueOf(Objects.hashCodeOf(Float.MAX_VALUE + 100.1234D)),
-        is(equalTo(Integer.valueOf((int) (longBits ^ (longBits >>> 32))))));
-    assertThat(Integer.valueOf(Objects.hashCodeOf(true)), is(equalTo(Integer.valueOf(Boolean.TRUE.hashCode()))));
-    assertThat(Integer.valueOf(Objects.hashCodeOf(false)), is(equalTo(Integer.valueOf(Boolean.FALSE.hashCode()))));
-    assertThat(Integer.valueOf(Objects.hashCodeOf(null)), is(equalTo(Integer.valueOf(0))));
-    assertThat(Integer.valueOf(Objects.hashCodeOf("test")), is(equalTo(Integer.valueOf("test".hashCode()))));
-    assertThat(Integer.valueOf(Objects.hashCodeOf(new String("test"))),
-        is(equalTo(Integer.valueOf(new String("test").hashCode()))));
-    assertThat(Integer.valueOf(Objects.hashCodeOf(new SomeObject("Kevin"))),
-        is(equalTo(Integer.valueOf(new SomeObject("Kevin").hashCode()))));
+    assertThat(Objects.hashCodeOf(Float.MAX_VALUE + 100.1234D)).isEqualTo((int) (longBits ^ (longBits >>> 32)));
+    assertThat(Objects.hashCodeOf(true)).isEqualTo(Boolean.TRUE.hashCode());
+    assertThat(Objects.hashCodeOf(false)).isEqualTo(Boolean.FALSE.hashCode());
+    assertThat(Objects.hashCodeOf(null)).isEqualTo(0);
+    assertThat(Objects.hashCodeOf("test")).isEqualTo("test".hashCode());
+    assertThat(Objects.hashCodeOf(new String("test"))).isEqualTo(new String("test").hashCode());
+    assertThat(Objects.hashCodeOf(new SomeObject("Kevin"))).isEqualTo(new SomeObject("Kevin").hashCode());
   }
 
   @Test
   public final void testHash()
   {
-    assertThat(Integer.valueOf(Objects.hash((Object[]) null)),
-        equalTo(Integer.valueOf(Arrays.hashCode((Object[]) null))));
-    assertThat(Integer.valueOf(Objects.hash((Object) null)),
-        equalTo(Integer.valueOf(Arrays.hashCode(new Object[] { null }))));
-    assertThat(Integer.valueOf(Objects.hash("test")),
-        equalTo(Integer.valueOf(Arrays.hashCode(new String[] { "test" }))));
-    assertThat(Integer.valueOf(Objects.hash(new String("test"))),
-        equalTo(Integer.valueOf(Arrays.hashCode(new String[] { new String("test") }))));
-    assertThat(Integer.valueOf(Objects.hash(new SomeObject("Kevin"))),
-        equalTo(Integer.valueOf(Arrays.hashCode(new SomeObject[] { new SomeObject("Kevin") }))));
-    assertThat(
-        Integer.valueOf(Objects.hash("test", new String("something else"), new SomeObject("Kevin"))),
-        equalTo(Integer.valueOf(Arrays.hashCode(new Object[] { "test", new String("something else"),
-            new SomeObject("Kevin") }))));
+    assertThat(Objects.hash((Object[]) null)).isEqualTo(Arrays.hashCode((Object[]) null));
+    assertThat(Objects.hash((Object) null)).isEqualTo(Arrays.hashCode(new Object[] { null }));
+    assertThat(Objects.hash("test")).isEqualTo(Arrays.hashCode(new String[] { "test" }));
+    assertThat(Objects.hash(new String("test"))).isEqualTo(Arrays.hashCode(new String[] { new String("test") }));
+    assertThat(Objects.hash(new SomeObject("Kevin"))).isEqualTo(
+        Arrays.hashCode(new SomeObject[] { new SomeObject("Kevin") }));
+    assertThat(Objects.hash("test", new String("something else"), new SomeObject("Kevin"))).isEqualTo(
+        Arrays.hashCode(new Object[] { "test", new String("something else"), new SomeObject("Kevin") }));
   }
 
   @SuppressWarnings("boxing")
@@ -586,24 +550,24 @@ public class ObjectsTest
     /* @formatter:off */
 					assertThat(
 							Objects.hash(
-							(byte) 1, 
-							(short) 120, 
-							12345, 
-							9999L, 
-							12.10F, 
-							100.12345D, 
-							true, 
-							"Kevin Lee"), equalTo(Integer.valueOf(result)));
+							(byte) 1,
+							(short) 120,
+							12345,
+							9999L,
+							12.10F,
+							100.12345D,
+							true,
+							"Kevin Lee")).isEqualTo(result);
 					assertThat(
 							Objects.hash(
-							(byte) 1, 
-							(short) 120, 
-							12345, 
-							9999L, 
-							12.10F, 
-							100.12345D, 
-							true, 
-							"Kevin Lee"), equalTo(Integer.valueOf(result)));
+							(byte) 1,
+							(short) 120,
+							12345,
+							9999L,
+							12.10F,
+							100.12345D,
+							true,
+							"Kevin Lee")).isEqualTo(result);
 					/* @formatter:on */
   }
 
@@ -612,10 +576,9 @@ public class ObjectsTest
   {
     final byte first = 3;
     final byte value = 5;
-    assertThat(Integer.valueOf(Objects.hash(value)),
-        is(equalTo(Integer.valueOf(Objects.HASH_PRIME * Objects.HASH_SEED + value))));
-    assertThat(Integer.valueOf(Objects.hashBytes(first, value)),
-        equalTo(Integer.valueOf(Objects.HASH_PRIME * (Objects.HASH_PRIME * Objects.HASH_SEED + first) + value)));
+    assertThat(Objects.hash(value)).isEqualTo(Objects.HASH_PRIME * Objects.HASH_SEED + value);
+    assertThat(Objects.hashBytes(first, value)).isEqualTo(
+        Objects.HASH_PRIME * (Objects.HASH_PRIME * Objects.HASH_SEED + first) + value);
 
     final byte[] values = { value, 6, 8, 10, 123 };
     int result = Objects.HASH_PRIME * Objects.HASH_SEED + values[0];
@@ -623,14 +586,11 @@ public class ObjectsTest
     result = Objects.HASH_PRIME * result + values[2];
     result = Objects.HASH_PRIME * result + values[3];
     result = Objects.HASH_PRIME * result + values[4];
-    assertThat(Integer.valueOf(Objects.hashBytes(values[0], values[1], values[2], values[3], values[4])),
-        equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hashBytes(first, (byte[]) null)),
-        equalTo(Integer.valueOf(Objects.HASH_PRIME * Objects.HASH_SEED + first)));
-    assertThat(Integer.valueOf(Objects.hash(values[0], values[1], values[2], values[3], values[4])),
-        equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hash(values)), equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hash((byte[]) null)), equalTo(Integer.valueOf(0)));
+    assertThat(Objects.hashBytes(values[0], values[1], values[2], values[3], values[4])).isEqualTo(result);
+    assertThat(Objects.hashBytes(first, (byte[]) null)).isEqualTo(Objects.HASH_PRIME * Objects.HASH_SEED + first);
+    assertThat(Objects.hash(values[0], values[1], values[2], values[3], values[4])).isEqualTo(result);
+    assertThat(Objects.hash(values)).isEqualTo(result);
+    assertThat(Objects.hash((byte[]) null)).isEqualTo(0);
   }
 
   @Test
@@ -638,10 +598,9 @@ public class ObjectsTest
   {
     final char first = 3;
     final char value = Character.MAX_VALUE - 100;
-    assertThat(Integer.valueOf(Objects.hash(value)),
-        is(equalTo(Integer.valueOf(Objects.HASH_PRIME * Objects.HASH_SEED + value))));
-    assertThat(Integer.valueOf(Objects.hashChars(first, value)),
-        equalTo(Integer.valueOf(Objects.HASH_PRIME * (Objects.HASH_PRIME * Objects.HASH_SEED + first) + value)));
+    assertThat(Objects.hash(value)).isEqualTo(Objects.HASH_PRIME * Objects.HASH_SEED + value);
+    assertThat(Objects.hashChars(first, value)).isEqualTo(
+        Objects.HASH_PRIME * (Objects.HASH_PRIME * Objects.HASH_SEED + first) + value);
 
     final char[] values = { value, 6, 8, 10, 123 };
     int result = Objects.HASH_PRIME * Objects.HASH_SEED + values[0];
@@ -649,14 +608,11 @@ public class ObjectsTest
     result = Objects.HASH_PRIME * result + values[2];
     result = Objects.HASH_PRIME * result + values[3];
     result = Objects.HASH_PRIME * result + values[4];
-    assertThat(Integer.valueOf(Objects.hashChars(values[0], values[1], values[2], values[3], values[4])),
-        equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hashChars(first, (char[]) null)),
-        equalTo(Integer.valueOf(Objects.HASH_PRIME * Objects.HASH_SEED + first)));
-    assertThat(Integer.valueOf(Objects.hash(values[0], values[1], values[2], values[3], values[4])),
-        equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hash(values)), equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hash((char[]) null)), equalTo(Integer.valueOf(0)));
+    assertThat(Objects.hashChars(values[0], values[1], values[2], values[3], values[4])).isEqualTo(result);
+    assertThat(Objects.hashChars(first, (char[]) null)).isEqualTo(Objects.HASH_PRIME * Objects.HASH_SEED + first);
+    assertThat(Objects.hash(values[0], values[1], values[2], values[3], values[4])).isEqualTo(result);
+    assertThat(Objects.hash(values)).isEqualTo(result);
+    assertThat(Objects.hash((char[]) null)).isEqualTo(0);
   }
 
   @Test
@@ -664,10 +620,9 @@ public class ObjectsTest
   {
     final short first = 3;
     final short value = Byte.MAX_VALUE + 100;
-    assertThat(Integer.valueOf(Objects.hash(value)),
-        is(equalTo(Integer.valueOf(Objects.HASH_PRIME * Objects.HASH_SEED + value))));
-    assertThat(Integer.valueOf(Objects.hashShorts(first, value)),
-        equalTo(Integer.valueOf(Objects.HASH_PRIME * (Objects.HASH_PRIME * Objects.HASH_SEED + first) + value)));
+    assertThat(Objects.hash(value)).isEqualTo(Objects.HASH_PRIME * Objects.HASH_SEED + value);
+    assertThat(Objects.hashShorts(first, value)).isEqualTo(
+        Objects.HASH_PRIME * (Objects.HASH_PRIME * Objects.HASH_SEED + first) + value);
 
     final short[] values = { value, 6, 8, 10, 123 };
     int result = Objects.HASH_PRIME * Objects.HASH_SEED + values[0];
@@ -675,14 +630,11 @@ public class ObjectsTest
     result = Objects.HASH_PRIME * result + values[2];
     result = Objects.HASH_PRIME * result + values[3];
     result = Objects.HASH_PRIME * result + values[4];
-    assertThat(Integer.valueOf(Objects.hashShorts(values[0], values[1], values[2], values[3], values[4])),
-        equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hashShorts(first, (short[]) null)),
-        equalTo(Integer.valueOf(Objects.HASH_PRIME * Objects.HASH_SEED + first)));
-    assertThat(Integer.valueOf(Objects.hash(values[0], values[1], values[2], values[3], values[4])),
-        equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hash(values)), equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hash((short[]) null)), equalTo(Integer.valueOf(0)));
+    assertThat(Objects.hashShorts(values[0], values[1], values[2], values[3], values[4])).isEqualTo(result);
+    assertThat(Objects.hashShorts(first, (short[]) null)).isEqualTo(Objects.HASH_PRIME * Objects.HASH_SEED + first);
+    assertThat(Objects.hash(values[0], values[1], values[2], values[3], values[4])).isEqualTo(result);
+    assertThat(Objects.hash(values)).isEqualTo(result);
+    assertThat(Objects.hash((short[]) null)).isEqualTo(0);
   }
 
   @Test
@@ -690,10 +642,9 @@ public class ObjectsTest
   {
     final int first = 3;
     final int value = Short.MAX_VALUE + 100;
-    assertThat(Integer.valueOf(Objects.hash(value)),
-        is(equalTo(Integer.valueOf(Objects.HASH_PRIME * Objects.HASH_SEED + value))));
-    assertThat(Integer.valueOf(Objects.hashInts(first, value)),
-        is(equalTo(Integer.valueOf(Objects.HASH_PRIME * (Objects.HASH_PRIME * Objects.HASH_SEED + first) + value))));
+    assertThat(Objects.hash(value)).isEqualTo(Objects.HASH_PRIME * Objects.HASH_SEED + value);
+    assertThat(Objects.hashInts(first, value)).isEqualTo(
+        Objects.HASH_PRIME * (Objects.HASH_PRIME * Objects.HASH_SEED + first) + value);
 
     final int[] values = { value, 6, 8, 10, 123 };
     int result = Objects.HASH_PRIME * Objects.HASH_SEED + values[0];
@@ -701,14 +652,11 @@ public class ObjectsTest
     result = Objects.HASH_PRIME * result + values[2];
     result = Objects.HASH_PRIME * result + values[3];
     result = Objects.HASH_PRIME * result + values[4];
-    assertThat(Integer.valueOf(Objects.hashInts(values[0], values[1], values[2], values[3], values[4])),
-        equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hashInts(first, (int[]) null)),
-        equalTo(Integer.valueOf(Objects.HASH_PRIME * Objects.HASH_SEED + first)));
-    assertThat(Integer.valueOf(Objects.hash(values[0], values[1], values[2], values[3], values[4])),
-        equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hash(values)), equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hash((int[]) null)), equalTo(Integer.valueOf(0)));
+    assertThat(Objects.hashInts(values[0], values[1], values[2], values[3], values[4])).isEqualTo(result);
+    assertThat(Objects.hashInts(first, (int[]) null)).isEqualTo(Objects.HASH_PRIME * Objects.HASH_SEED + first);
+    assertThat(Objects.hash(values[0], values[1], values[2], values[3], values[4])).isEqualTo(result);
+    assertThat(Objects.hash(values)).isEqualTo(result);
+    assertThat(Objects.hash((int[]) null)).isEqualTo(0);
   }
 
   @Test
@@ -716,13 +664,10 @@ public class ObjectsTest
   {
     final long first = 3;
     final long value = Integer.MAX_VALUE + 100L;
-    assertThat(Integer.valueOf(Objects.hash(value)),
-        is(equalTo(Integer.valueOf(Objects.HASH_PRIME * Objects.HASH_SEED + (int) (value ^ (value >>> 32))))));
-    assertThat(
-        Integer.valueOf(Objects.hashLongs(first, value)),
-        equalTo(Integer.valueOf(Objects.HASH_PRIME
-            * (Objects.HASH_PRIME * Objects.HASH_SEED + (int) (first ^ (first >>> 32)))
-            + (int) (value ^ (value >>> 32)))));
+    assertThat(Objects.hash(value)).isEqualTo(Objects.HASH_PRIME * Objects.HASH_SEED + (int) (value ^ (value >>> 32)));
+    assertThat(Objects.hashLongs(first, value)).isEqualTo(
+        Objects.HASH_PRIME * (Objects.HASH_PRIME * Objects.HASH_SEED + (int) (first ^ (first >>> 32)))
+            + (int) (value ^ (value >>> 32)));
 
     final long[] values = { 5, 6, 8, 10, 123 };
     int result = Objects.HASH_PRIME * Objects.HASH_SEED + (int) (values[0] ^ (values[0] >>> 32));
@@ -730,14 +675,12 @@ public class ObjectsTest
     result = Objects.HASH_PRIME * result + (int) (values[2] ^ (values[2] >>> 32));
     result = Objects.HASH_PRIME * result + (int) (values[3] ^ (values[3] >>> 32));
     result = Objects.HASH_PRIME * result + (int) (values[4] ^ (values[4] >>> 32));
-    assertThat(Integer.valueOf(Objects.hashLongs(values[0], values[1], values[2], values[3], values[4])),
-        equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hashLongs(first, (long[]) null)),
-        equalTo(Integer.valueOf(Objects.HASH_PRIME * Objects.HASH_SEED + (int) (first ^ (first >>> 32)))));
-    assertThat(Integer.valueOf(Objects.hash(values[0], values[1], values[2], values[3], values[4])),
-        equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hash(values)), equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hash((long[]) null)), equalTo(Integer.valueOf(0)));
+    assertThat(Objects.hashLongs(values[0], values[1], values[2], values[3], values[4])).isEqualTo(result);
+    assertThat(Objects.hashLongs(first, (long[]) null)).isEqualTo(
+        Objects.HASH_PRIME * Objects.HASH_SEED + (int) (first ^ (first >>> 32)));
+    assertThat(Objects.hash(values[0], values[1], values[2], values[3], values[4])).isEqualTo(result);
+    assertThat(Objects.hash(values)).isEqualTo(result);
+    assertThat(Objects.hash((long[]) null)).isEqualTo(0);
   }
 
   @Test
@@ -745,12 +688,10 @@ public class ObjectsTest
   {
     final float first = 3;
     final float value = 5.0F;
-    assertThat(Integer.valueOf(Objects.hash(value)),
-        is(equalTo(Integer.valueOf(Objects.HASH_PRIME * Objects.HASH_SEED + Float.floatToIntBits(value)))));
-    assertThat(
-        Integer.valueOf(Objects.hashFloats(first, value)),
-        equalTo(Integer.valueOf(Objects.HASH_PRIME
-            * (Objects.HASH_PRIME * Objects.HASH_SEED + Float.floatToIntBits(first)) + Float.floatToIntBits(value))));
+    assertThat(Objects.hash(value)).isEqualTo(Objects.HASH_PRIME * Objects.HASH_SEED + Float.floatToIntBits(value));
+    assertThat(Objects.hashFloats(first, value)).isEqualTo(
+        Objects.HASH_PRIME * (Objects.HASH_PRIME * Objects.HASH_SEED + Float.floatToIntBits(first))
+            + Float.floatToIntBits(value));
 
     final float[] values = { 5, 6, 8, 10, 123 };
     int result = Objects.HASH_PRIME * Objects.HASH_SEED + Float.floatToIntBits(values[0]);
@@ -758,15 +699,13 @@ public class ObjectsTest
     result = Objects.HASH_PRIME * result + Float.floatToIntBits(values[2]);
     result = Objects.HASH_PRIME * result + Float.floatToIntBits(values[3]);
     result = Objects.HASH_PRIME * result + Float.floatToIntBits(values[4]);
-    assertThat(Integer.valueOf(Objects.hashFloats(values[0], values[1], values[2], values[3], values[4])),
-        equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hashFloats(first, (float[]) null)), equalTo(Integer.valueOf(
+    assertThat(Objects.hashFloats(values[0], values[1], values[2], values[3], values[4])).isEqualTo(result);
+    assertThat(Objects.hashFloats(first, (float[]) null)).isEqualTo(
 
-    Objects.HASH_PRIME * Objects.HASH_SEED + Float.floatToIntBits(first))));
-    assertThat(Integer.valueOf(Objects.hash(values[0], values[1], values[2], values[3], values[4])),
-        equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hash(values)), equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hash((float[]) null)), equalTo(Integer.valueOf(0)));
+    Objects.HASH_PRIME * Objects.HASH_SEED + Float.floatToIntBits(first));
+    assertThat(Objects.hash(values[0], values[1], values[2], values[3], values[4])).isEqualTo(result);
+    assertThat(Objects.hash(values)).isEqualTo(result);
+    assertThat(Objects.hash((float[]) null)).isEqualTo(0);
   }
 
   @Test
@@ -775,21 +714,18 @@ public class ObjectsTest
     final double value = Float.MAX_VALUE + 100D;
     long doubleToLongBits = Double.doubleToLongBits(value);
     final int first = 3;
-    assertThat(
-        Integer.valueOf(Objects.hash(value)),
-        is(equalTo(Integer.valueOf(Objects.HASH_PRIME * Objects.HASH_SEED
-            + (int) (doubleToLongBits ^ (doubleToLongBits >>> 32))))));
+    assertThat(Objects.hash(value)).isEqualTo(
+        Objects.HASH_PRIME * Objects.HASH_SEED + (int) (doubleToLongBits ^ (doubleToLongBits >>> 32)));
     /* @formatter:off */
     assertThat(
-        Integer.valueOf(Objects.hashDoubles(first, value)),
-        is(equalTo(Integer.valueOf(
+        Objects.hashDoubles(first, value)).isEqualTo(
             Objects.HASH_PRIME *
             (Objects.HASH_PRIME *
                 Objects.HASH_SEED +
                 (int) (Double.doubleToLongBits(first) ^ (Double.doubleToLongBits(first) >>> 32))
             ) +
             (int) (doubleToLongBits ^ (doubleToLongBits >>> 32))
-            ))));
+            );
     /* @formatter:on */
 
     final double[] values = { value, 6, 8, 10, 123 };
@@ -803,29 +739,23 @@ public class ObjectsTest
     result = Objects.HASH_PRIME * result + (int) (doubleToLongBits ^ (doubleToLongBits >>> 32));
     doubleToLongBits = Double.doubleToLongBits(values[4]);
     result = Objects.HASH_PRIME * result + (int) (doubleToLongBits ^ (doubleToLongBits >>> 32));
-    assertThat(Integer.valueOf(Objects.hashDoubles(values[0], values[1], values[2], values[3], values[4])),
-        equalTo(Integer.valueOf(result)));
-    assertThat(
-        Integer.valueOf(Objects.hashDoubles(first, (double[]) null)),
-        is(equalTo(Integer.valueOf(Objects.HASH_PRIME * Objects.HASH_SEED
-            + (int) (Double.doubleToLongBits(first) ^ (Double.doubleToLongBits(first) >>> 32))))));
-    assertThat(Integer.valueOf(Objects.hash(values[0], values[1], values[2], values[3], values[4])),
-        equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hash(values)), equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hash((double[]) null)), equalTo(Integer.valueOf(0)));
+    assertThat(Objects.hashDoubles(values[0], values[1], values[2], values[3], values[4])).isEqualTo(result);
+    assertThat(Objects.hashDoubles(first, (double[]) null)).isEqualTo(
+        Objects.HASH_PRIME * Objects.HASH_SEED
+            + (int) (Double.doubleToLongBits(first) ^ (Double.doubleToLongBits(first) >>> 32)));
+    assertThat(Objects.hash(values[0], values[1], values[2], values[3], values[4])).isEqualTo(result);
+    assertThat(Objects.hash(values)).isEqualTo(result);
+    assertThat(Objects.hash((double[]) null)).isEqualTo(0);
   }
 
   @Test
   public final void testHashBoolean()
   {
     final boolean first = false;
-    assertThat(Integer.valueOf(Objects.hash(true)),
-        is(equalTo(Integer.valueOf(Objects.HASH_PRIME * Objects.HASH_SEED + Boolean.TRUE.hashCode()))));
-    assertThat(
-        Integer.valueOf(Objects.hash(first, true)),
-        is(equalTo(Integer.valueOf(Objects.HASH_PRIME
-            * (Objects.HASH_PRIME * Objects.HASH_SEED + Boolean.valueOf(first)
-                .hashCode()) + Boolean.TRUE.hashCode()))));
+    assertThat(Objects.hash(true)).isEqualTo(Objects.HASH_PRIME * Objects.HASH_SEED + Boolean.TRUE.hashCode());
+    assertThat(Objects.hash(first, true)).isEqualTo(
+        Objects.HASH_PRIME * (Objects.HASH_PRIME * Objects.HASH_SEED + ((Boolean) first).hashCode())
+            + Boolean.TRUE.hashCode());
 
     final boolean[] values = { false, true, true, false, true };
     int result = Objects.HASH_PRIME * Objects.HASH_SEED + (values[0] ? 1231 : 1237);
@@ -833,15 +763,12 @@ public class ObjectsTest
     result = Objects.HASH_PRIME * result + (values[2] ? 1231 : 1237);
     result = Objects.HASH_PRIME * result + (values[3] ? 1231 : 1237);
     result = Objects.HASH_PRIME * result + (values[4] ? 1231 : 1237);
-    assertThat(Integer.valueOf(Objects.hashBooleans(values[0], values[1], values[2], values[3], values[4])),
-        equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hashBooleans(first, (boolean[]) null)),
-        equalTo(Integer.valueOf(Objects.HASH_PRIME * Objects.HASH_SEED + Boolean.valueOf(first)
-            .hashCode())));
-    assertThat(Integer.valueOf(Objects.hash(values[0], values[1], values[2], values[3], values[4])),
-        equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hash(values)), equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hash((boolean[]) null)), equalTo(Integer.valueOf(0)));
+    assertThat(Objects.hashBooleans(values[0], values[1], values[2], values[3], values[4])).isEqualTo(result);
+    assertThat(Objects.hashBooleans(first, (boolean[]) null)).isEqualTo(
+        Objects.HASH_PRIME * Objects.HASH_SEED + ((Boolean) first).hashCode());
+    assertThat(Objects.hash(values[0], values[1], values[2], values[3], values[4])).isEqualTo(result);
+    assertThat(Objects.hash(values)).isEqualTo(result);
+    assertThat(Objects.hash((boolean[]) null)).isEqualTo(0);
   }
 
   @Test
@@ -849,12 +776,9 @@ public class ObjectsTest
   {
     final String first = "3";
     final String value = "Kevin";
-    assertThat(Integer.valueOf(Objects.hash(value)),
-        is(equalTo(Integer.valueOf(Objects.HASH_PRIME * Objects.HASH_SEED + value.hashCode()))));
-    assertThat(
-        Integer.valueOf(Objects.hash(first, value)),
-        is(equalTo(Integer.valueOf(Objects.HASH_PRIME * (Objects.HASH_PRIME * Objects.HASH_SEED + first.hashCode())
-            + value.hashCode()))));
+    assertThat(Objects.hash(value)).isEqualTo(Objects.HASH_PRIME * Objects.HASH_SEED + value.hashCode());
+    assertThat(Objects.hash(first, value)).isEqualTo(
+        Objects.HASH_PRIME * (Objects.HASH_PRIME * Objects.HASH_SEED + first.hashCode()) + value.hashCode());
 
     final Object[] values = { value, "Lee", new Object(), new Date(), new ArrayList<String>() };
     int result = Objects.HASH_PRIME * Objects.HASH_SEED + values[0].hashCode();
@@ -862,64 +786,60 @@ public class ObjectsTest
     result = Objects.HASH_PRIME * result + values[2].hashCode();
     result = Objects.HASH_PRIME * result + values[3].hashCode();
     result = Objects.HASH_PRIME * result + values[4].hashCode();
-    assertThat(Integer.valueOf(Objects.hash(values[0], values[1], values[2], values[3], values[4])),
-        equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hash(first, (Object[]) null)),
-        equalTo(Integer.valueOf(Objects.HASH_PRIME * Objects.HASH_SEED + first.hashCode())));
-    assertThat(Integer.valueOf(Objects.hash(values)), equalTo(Integer.valueOf(result)));
-    assertThat(Integer.valueOf(Objects.hash((Object[]) null)), equalTo(Integer.valueOf(0)));
+    assertThat(Objects.hash(values[0], values[1], values[2], values[3], values[4])).isEqualTo(result);
+    assertThat(Objects.hash(first, (Object[]) null)).isEqualTo(
+        Objects.HASH_PRIME * Objects.HASH_SEED + first.hashCode());
+    assertThat(Objects.hash(values)).isEqualTo(result);
+    assertThat(Objects.hash((Object[]) null)).isEqualTo(0);
   }
 
   @Test
   public final void testToStringOfObject()
   {
-    assertThat(Objects.toStringOf(null), equalTo("null"));
-    assertThat(Objects.toStringOf("test"), equalTo("test"));
-    assertThat(Objects.toStringOf(new String("something else")), equalTo("something else"));
+    assertThat(Objects.toStringOf(null)).isEqualTo("null");
+    assertThat(Objects.toStringOf("test")).isEqualTo("test");
+    assertThat(Objects.toStringOf(new String("something else"))).isEqualTo("something else");
     final Object object = new Object();
-    assertThat(Objects.toStringOf(object), equalTo(object.toString()));
-    assertThat(Objects.toStringOf(new SomeObject("Kevin")), equalTo(new SomeObject("Kevin").toString()));
+    assertThat(Objects.toStringOf(object)).isEqualTo(object.toString());
+    assertThat(Objects.toStringOf(new SomeObject("Kevin"))).isEqualTo(new SomeObject("Kevin").toString());
     final SomeObject someObject = new SomeObject("Lee");
-    assertThat(Objects.toStringOf(someObject), equalTo(someObject.toString()));
+    assertThat(Objects.toStringOf(someObject)).isEqualTo(someObject.toString());
   }
 
   @Test
   public final void testToStringOfArray()
   {
-    assertThat(Objects.toStringOf(null), is(equalTo("null")));
-    assertThat(Objects.toStringOf(new String[] { "test" }), is(equalTo("[test]")));
-    assertThat(Objects.toStringOf(new String[] { "test", "something else" }), is(equalTo("[test, something else]")));
+    assertThat(Objects.toStringOf(null)).isEqualTo("null");
+    assertThat(Objects.toStringOf(new String[] { "test" })).isEqualTo("[test]");
+    assertThat(Objects.toStringOf(new String[] { "test", "something else" })).isEqualTo("[test, something else]");
     assertThat(
-        Objects.toStringOf(new int[] { -100, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 100 }),
-        is(equalTo("[-100, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 100]")));
+        Objects.toStringOf(new int[] { -100, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 100 })).isEqualTo(
+        "[-100, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 100]");
 
     final Object[] objects = new Object[] { new Object(), new Object() };
-    assertThat(Objects.toStringOf(objects),
-        is(equalTo("[" + objects[0].toString() + ", " + objects[1].toString() + "]")));
+    assertThat(Objects.toStringOf(objects)).isEqualTo("[" + objects[0].toString() + ", " + objects[1].toString() + "]");
 
-    assertThat(Objects.toStringOf(new SomeObject[] { new SomeObject("Kevin"), new SomeObject("Lee") }), is(equalTo("["
-        + new SomeObject("Kevin").toString() + ", " + new SomeObject("Lee") + "]")));
+    assertThat(Objects.toStringOf(new SomeObject[] { new SomeObject("Kevin"), new SomeObject("Lee") })).isEqualTo(
+        "[" + new SomeObject("Kevin").toString() + ", " + new SomeObject("Lee") + "]");
 
     final SomeObject[] someObjects =
       new SomeObject[] { new SomeObject("Lee"), new SomeObject("Kevin Lee"), new SomeObject("Kevin") };
-    assertThat(
-        Objects.toStringOf(someObjects),
-        is(equalTo("[" + someObjects[0].toString() + ", " + someObjects[1].toString() + ", "
-            + someObjects[2].toString() + "]")));
+    assertThat(Objects.toStringOf(someObjects)).isEqualTo(
+        "[" + someObjects[0].toString() + ", " + someObjects[1].toString() + ", " + someObjects[2].toString() + "]");
   }
 
   @Test
   public final void testToStringOfObjectString()
   {
     final String nullDefault = "It is null!!!";
-    assertThat(Objects.toStringOf(null, nullDefault), equalTo(nullDefault));
-    assertThat(Objects.toStringOf("test", nullDefault), equalTo("test"));
-    assertThat(Objects.toStringOf(new String("something else"), nullDefault), equalTo("something else"));
+    assertThat(Objects.toStringOf(null, nullDefault)).isEqualTo(nullDefault);
+    assertThat(Objects.toStringOf("test", nullDefault)).isEqualTo("test");
+    assertThat(Objects.toStringOf(new String("something else"), nullDefault)).isEqualTo("something else");
     final Object object = new Object();
-    assertThat(Objects.toStringOf(object, nullDefault), equalTo(object.toString()));
-    assertThat(Objects.toStringOf(new SomeObject("Kevin"), nullDefault), equalTo(new SomeObject("Kevin").toString()));
+    assertThat(Objects.toStringOf(object, nullDefault)).isEqualTo(object.toString());
+    assertThat(Objects.toStringOf(new SomeObject("Kevin"), nullDefault)).isEqualTo(new SomeObject("Kevin").toString());
     final SomeObject someObject = new SomeObject("Lee");
-    assertThat(Objects.toStringOf(someObject, nullDefault), equalTo(someObject.toString()));
+    assertThat(Objects.toStringOf(someObject, nullDefault)).isEqualTo(someObject.toString());
   }
 
   @Test
@@ -956,46 +876,46 @@ public class ObjectsTest
         return (name1.length() < name2.length() ? -1 : 0);
       }
     };
-    assertThat(Integer.valueOf(Objects.compare(null, null, comparator)), equalTo(Integer.valueOf(0)));
+    assertThat(Objects.compare(null, null, comparator)).isEqualTo(0);
 
     SomeObject someObject1 = new SomeObject("Kevin");
     SomeObject someObject2 = new SomeObject("Kevin");
-    assertThat(Integer.valueOf(Objects.compare(someObject1, someObject2, comparator)),
-        equalTo(Integer.valueOf(comparator.compare(someObject1, someObject2))));
+    assertThat(Objects.compare(someObject1, someObject2, comparator)).isEqualTo(
+        comparator.compare(someObject1, someObject2));
 
     someObject1 = new SomeObject("Kevin");
     someObject2 = someObject1;
-    assertThat(Integer.valueOf(Objects.compare(someObject1, someObject2, comparator)),
-        equalTo(Integer.valueOf(comparator.compare(someObject1, someObject2))));
+    assertThat(Objects.compare(someObject1, someObject2, comparator)).isEqualTo(
+        comparator.compare(someObject1, someObject2));
 
     someObject1 = null;
     someObject2 = new SomeObject("Kevin");
-    assertThat(Integer.valueOf(Objects.compare(someObject1, someObject2, comparator)),
-        equalTo(Integer.valueOf(comparator.compare(someObject1, someObject2))));
+    assertThat(Objects.compare(someObject1, someObject2, comparator)).isEqualTo(
+        comparator.compare(someObject1, someObject2));
 
     someObject1 = new SomeObject("Kevin");
     someObject2 = null;
-    assertThat(Integer.valueOf(Objects.compare(someObject1, someObject2, comparator)),
-        equalTo(Integer.valueOf(comparator.compare(someObject1, someObject2))));
+    assertThat(Objects.compare(someObject1, someObject2, comparator)).isEqualTo(
+        comparator.compare(someObject1, someObject2));
 
     someObject1 = new SomeObject("KevinLee");
     someObject2 = new SomeObject("Kevin");
-    assertThat(Integer.valueOf(Objects.compare(someObject1, someObject2, comparator)),
-        equalTo(Integer.valueOf(comparator.compare(someObject1, someObject2))));
+    assertThat(Objects.compare(someObject1, someObject2, comparator)).isEqualTo(
+        comparator.compare(someObject1, someObject2));
 
     someObject1 = new SomeObject("Kevin");
     someObject2 = new SomeObject("Lee");
-    assertThat(Integer.valueOf(Objects.compare(someObject1, someObject2, comparator)),
-        equalTo(Integer.valueOf(comparator.compare(someObject1, someObject2))));
+    assertThat(Objects.compare(someObject1, someObject2, comparator)).isEqualTo(
+        comparator.compare(someObject1, someObject2));
   }
 
   @Test
   public final void testMustNotBeNullT()
   {
     /* when / then */
-    assertThat(Objects.mustNotBeNull("test"), is(equalTo("test")));
-    assertThat(Objects.mustNotBeNull(new String("something else")), is(equalTo(new String("something else"))));
-    assertThat(Objects.mustNotBeNull(new SomeObject("Kevin")), is(equalTo(new SomeObject("Kevin"))));
+    assertThat(Objects.mustNotBeNull("test")).isEqualTo("test");
+    assertThat(Objects.mustNotBeNull(new String("something else"))).isEqualTo(new String("something else"));
+    assertThat(Objects.mustNotBeNull(new SomeObject("Kevin"))).isEqualTo(new SomeObject("Kevin"));
 
     /* expect */
     expectedException.expect(NullPointerException.class);
@@ -1011,13 +931,13 @@ public class ObjectsTest
   public final void testMustNotBeNullTString()
   {
     final String message = "It is null!!!!!";
-    assertThat(Objects.mustNotBeNull("test", message), is(equalTo("test")));
-    assertThat(Objects.mustNotBeNull(new String("something else"), message), is(equalTo(new String("something else"))));
-    assertThat(Objects.mustNotBeNull(new SomeObject("Kevin"), message), is(equalTo(new SomeObject("Kevin"))));
+    assertThat(Objects.mustNotBeNull("test", message)).isEqualTo("test");
+    assertThat(Objects.mustNotBeNull(new String("something else"), message)).isEqualTo(new String("something else"));
+    assertThat(Objects.mustNotBeNull(new SomeObject("Kevin"), message)).isEqualTo(new SomeObject("Kevin"));
 
     /* expect */
     expectedException.expect(NullPointerException.class)
-        .expectMessage(is(equalTo(message)));
+        .expectMessage(CoreMatchers.equalTo(message));
 
     /* when / then the expected exception should be thrown. */
     Objects.mustNotBeNull(null, message);
@@ -1034,53 +954,170 @@ public class ObjectsTest
     final Object object2 = new Object();
     final Object value1 = Objects.nullThenUse(nullReference, object1);
     final Object value2 = Objects.nullThenUse(object1, object2);
-    assertThat(value1, is(equalTo(object1)));
-    assertThat(value2, is(equalTo(object1)));
+    assertThat(value1).isEqualTo(object1);
+    assertThat(value2).isEqualTo(object1);
 
     final String string1 = new String("Kevin");
     final String string2 = new String("Lee");
     final String stringValue1 = Objects.nullThenUse((String) null, string1);
     final String stringValue2 = Objects.nullThenUse(string1, string2);
-    assertThat(stringValue1, is(equalTo(string1)));
-    assertThat(stringValue2, is(equalTo(string1)));
+    assertThat(stringValue1).isEqualTo(string1);
+    assertThat(stringValue2).isEqualTo(string1);
 
     final Date date1 = new Date();
     final Date date2 = new Date();
     final Date dateValue1 = Objects.nullThenUse((Date) null, date1);
     final Date dateValue2 = Objects.nullThenUse(date1, date2);
-    assertThat(dateValue1, is(equalTo(date1)));
-    assertThat(dateValue2, is(equalTo(date1)));
+    assertThat(dateValue1).isEqualTo(date1);
+    assertThat(dateValue2).isEqualTo(date1);
 
     final Integer integer1 = new Integer(100);
     final Integer integer2 = new Integer(999);
     final Integer integerValue1 = Objects.nullThenUse((Integer) null, integer1);
     final Integer integerValue2 = Objects.nullThenUse(integer1, integer2);
-    assertThat(integerValue1, is(equalTo(integer1)));
-    assertThat(integerValue2, is(equalTo(integer1)));
+    assertThat(integerValue1).isEqualTo(integer1);
+    assertThat(integerValue2).isEqualTo(integer1);
+  }
+
+  @Test
+  public final void testNullThenGet()
+  {
+    final Object nullReference = null;
+    final Object object1 = new Object();
+    final Object object2 = new Object();
+    final Object value1 = Objects.nullThenGet(nullReference, new Suppliable<Object>() {
+      @Override
+      public Object supply()
+      {
+        return object1;
+      }
+    });
+    final Object value2 = Objects.nullThenGet(object1, new Suppliable<Object>() {
+      @Override
+      public Object supply()
+      {
+        return object2;
+      }
+    });
+    assertThat(value1).isEqualTo(object1);
+    assertThat(value2).isEqualTo(object1);
+
+    final String string1 = new String("Kevin");
+    final String string2 = new String("Lee");
+    final String stringValue1 = Objects.nullThenGet((String) null, new Suppliable<String>() {
+      @Override
+      public String supply()
+      {
+        return string1;
+      }
+    });
+    final String stringValue2 = Objects.nullThenGet(string1, new Suppliable<String>() {
+      @Override
+      public String supply()
+      {
+        return string2;
+      }
+    });
+    assertThat(stringValue1).isEqualTo(string1);
+    assertThat(stringValue2).isEqualTo(string1);
+
+    final Date date1 = new Date();
+    final Date date2 = new Date();
+    final Date dateValue1 = Objects.nullThenGet((Date) null, new Suppliable<Date>() {
+      @Override
+      public Date supply()
+      {
+        return date1;
+      }
+    });
+    final Date dateValue2 = Objects.nullThenGet(date1, new Suppliable<Date>() {
+      @Override
+      public Date supply()
+      {
+        return date2;
+      }
+    });
+    assertThat(dateValue1).isEqualTo(date1);
+    assertThat(dateValue2).isEqualTo(date1);
+
+    final Integer integer1 = new Integer(100);
+    final Integer integer2 = new Integer(999);
+    final Integer integerValue1 = Objects.nullThenGet((Integer) null, new Suppliable<Integer>() {
+      @Override
+      public Integer supply()
+      {
+        return integer1;
+      }
+    });
+    final Integer integerValue2 = Objects.nullThenGet(integer1, new Suppliable<Integer>() {
+      @Override
+      public Integer supply()
+      {
+        return integer2;
+      }
+    });
+    assertThat(integerValue1).isEqualTo(integer1);
+    assertThat(integerValue2).isEqualTo(integer1);
+  }
+
+  @Test
+  public final void testNullThenGetWithNullSuppliable()
+  {
+    /* given */
+    final Object nullReference = null;
+
+    /* expected */
+    expectedException.expectMessageContains("defaultValueSupplier must not be null")
+        .expect(NullPointerException.class);
+
+    /* when */
+    Objects.nullThenGet(nullReference, null);
+
+    /* otherwise-fail */
+    fail("It did not throw " + NullPointerException.class.getSimpleName()
+        + " when Suppliable<T> defaultValueSupplier was null.");
+  }
+
+  @Test
+  public final void testNullThenGetWithNullSuppliable2()
+  {
+    /* given */
+    final Object object1 = new Object();
+
+    /* expected */
+    expectedException.expectMessageContains("defaultValueSupplier must not be null")
+        .expect(NullPointerException.class);
+
+    /* when */
+    Objects.nullThenGet(object1, null);
+
+    /* otherwise-fail */
+    fail("It did not throw " + NullPointerException.class.getSimpleName()
+        + " when Suppliable<T> defaultValueSupplier was null.");
   }
 
   @Test
   public final void testIsNull()
   {
-    assertTrue(Objects.isNull(null));
+    assertThat(Objects.isNull(null)).isTrue();
     final Object nullObject = null;
-    assertTrue(Objects.isNull(nullObject));
-    assertFalse(Objects.isNull(""));
-    assertFalse(Objects.isNull("Kevin"));
-    assertFalse(Objects.isNull(new String("test")));
-    assertFalse(Objects.isNull(new Object()));
+    assertThat(Objects.isNull(nullObject)).isTrue();
+    assertThat(Objects.isNull("")).isFalse();
+    assertThat(Objects.isNull("Kevin")).isFalse();
+    assertThat(Objects.isNull(new String("test"))).isFalse();
+    assertThat(Objects.isNull(new Object())).isFalse();
   }
 
   @Test
   public final void testIsNotNull()
   {
-    assertFalse(Objects.isNotNull(null));
+    assertThat(Objects.isNotNull(null)).isFalse();
     final Object nullObject = null;
-    assertFalse(Objects.isNotNull(nullObject));
-    assertTrue(Objects.isNotNull(""));
-    assertTrue(Objects.isNotNull("Kevin"));
-    assertTrue(Objects.isNotNull(new String("test")));
-    assertTrue(Objects.isNotNull(new Object()));
+    assertThat(Objects.isNotNull(nullObject)).isFalse();
+    assertThat(Objects.isNotNull("")).isTrue();
+    assertThat(Objects.isNotNull("Kevin")).isTrue();
+    assertThat(Objects.isNotNull(new String("test"))).isTrue();
+    assertThat(Objects.isNotNull(new Object())).isTrue();
   }
 
   @Test
@@ -1089,11 +1126,11 @@ public class ObjectsTest
     final Object object1 = new Object();
     final Object object2 = object1;
     final Object object3 = new Object();
-    assertTrue(Objects.identical(object1, object2));
-    assertFalse(Objects.identical(object1, object3));
+    assertThat(Objects.identical(object1, object2)).isTrue();
+    assertThat(Objects.identical(object1, object3)).isFalse();
 
-    assertTrue(Objects.identical("Kevin", "Kevin"));
-    assertFalse(Objects.identical("Kevin", new String("Kevin")));
+    assertThat(Objects.identical("Kevin", "Kevin")).isTrue();
+    assertThat(Objects.identical("Kevin", new String("Kevin"))).isFalse();
   }
 
   @Test
@@ -1102,11 +1139,11 @@ public class ObjectsTest
     final Object object1 = new Object();
     final Object object2 = object1;
     final Object object3 = new Object();
-    assertFalse(Objects.notIdentical(object1, object2));
-    assertTrue(Objects.notIdentical(object1, object3));
+    assertThat(Objects.notIdentical(object1, object2)).isFalse();
+    assertThat(Objects.notIdentical(object1, object3)).isTrue();
 
-    assertFalse(Objects.notIdentical("Kevin", "Kevin"));
-    assertTrue(Objects.notIdentical("Kevin", new String("Kevin")));
+    assertThat(Objects.notIdentical("Kevin", "Kevin")).isFalse();
+    assertThat(Objects.notIdentical("Kevin", new String("Kevin"))).isTrue();
   }
 
   @Test
@@ -1114,24 +1151,24 @@ public class ObjectsTest
   {
     final Object object1 = "Kevin Lee";
     final String string1 = Objects.castIfInstanceOf(String.class, object1);
-    assertThat(string1, is(notNullValue()));
-    assertThat(string1, is(equalTo("Kevin Lee")));
+    assertThat(string1).isNotNull();
+    assertThat(string1).isEqualTo("Kevin Lee");
 
     final Integer integer = new Integer(1234);
     final Object object2 = new Integer(1234);
     final Integer integer1 = Objects.castIfInstanceOf(Integer.class, object2);
-    assertThat(integer1, is(notNullValue()));
-    assertThat(integer1, is(equalTo(integer)));
+    assertThat(integer1).isNotNull();
+    assertThat(integer1).isEqualTo(integer);
 
     final Number number1 = Objects.castIfInstanceOf(Number.class, object2);
-    assertThat(number1, is(notNullValue()));
-    assertThat(number1, is(equalTo((Number) integer)));
+    assertThat(number1).isNotNull();
+    assertThat(number1).isEqualTo(integer);
 
     final Integer integer2 = Objects.castIfInstanceOf(Integer.class, object1);
-    assertThat(integer2, is(nullValue()));
+    assertThat(integer2).isNull();
 
     final Number number2 = Objects.castIfInstanceOf(Number.class, object1);
-    assertThat(number2, is(nullValue()));
+    assertThat(number2).isNull();
 
     final Integer integer3 = Objects.castIfInstanceOf(Integer.class, new Number() {
       /* @formatter:off */
@@ -1142,7 +1179,7 @@ public class ObjectsTest
 			@Override public double doubleValue() 	{ return 0; }
 			/* @formatter:on */
     });
-    assertThat(integer3, is(nullValue()));
+    assertThat(integer3).isNull();
   }
 
   private static class SomePojo
@@ -1206,7 +1243,7 @@ public class ObjectsTest
 
     final SomePojo somePojo =
       new SomePojo(Long.valueOf(100L), "Kevin", true, (byte) 10, (short) 20, 100, 1000000L, 12.34F, 56.78D);
-    assertThat(somePojo.toString(), is(equalTo(expected)));
+    assertThat(somePojo.toString()).isEqualTo(expected);
 
     /* @formatter:off */
 		final String expected2 = "ObjectsTest{id=999, " +
@@ -1239,19 +1276,19 @@ public class ObjectsTest
         .add("longValue", longValue)
         .add("floatValue", floatValue)
         .add("doubleValue", doubleValue)
-        .toString(), is(equalTo(expected2)));
+        .toString()).isEqualTo(expected2);
 
     assertThat(Objects.toStringBuilder(this)
         .value("")
-        .toString(), is(equalTo(getClass().getSimpleName() + "{}")));
+        .toString()).isEqualTo(getClass().getSimpleName() + "{}");
 
     assertThat(Objects.toStringBuilder(this)
-        .toString(), is(equalTo(getClass().getSimpleName() + "{}")));
+        .toString()).isEqualTo(getClass().getSimpleName() + "{}");
 
     assertThat(Objects.toStringBuilder(this)
-        .getFieldSeparator(), is(equalTo(Objects.ToStringBuilder.DEFAULT_FIELD_SEPARATOR)));
+        .getFieldSeparator()).isEqualTo(Objects.ToStringBuilder.DEFAULT_FIELD_SEPARATOR);
     assertThat(Objects.toStringBuilder(this)
-        .getNameValueSeparator(), is(equalTo(Objects.ToStringBuilder.DEFAULT_NAME_VALUE_SEPARATOR)));
+        .getNameValueSeparator()).isEqualTo(Objects.ToStringBuilder.DEFAULT_NAME_VALUE_SEPARATOR);
   }
 
   @Test
@@ -1291,7 +1328,7 @@ public class ObjectsTest
     System.out.println(actual);
 
     /* then */
-    assertThat(actual, is(equalTo(expected)));
+    assertThat(actual).isEqualTo(expected);
   }
 
   @Test
@@ -1330,7 +1367,7 @@ public class ObjectsTest
         .add("longValue", longValue)
         .add("floatValue", floatValue)
         .add("doubleValue", doubleValue)
-        .toString(), is(equalTo(expected2)));
+        .toString()).isEqualTo(expected2);
   }
 
   @Test
@@ -1371,7 +1408,7 @@ public class ObjectsTest
         .add("longValue", longValue)
         .add("floatValue", floatValue)
         .add("doubleValue", doubleValue)
-        .toString(), is(equalTo(expected2)));
+        .toString()).isEqualTo(expected2);
   }
 
   @Test
@@ -1412,7 +1449,7 @@ public class ObjectsTest
         .add("longValue", longValue)
         .add("floatValue", floatValue)
         .add("doubleValue", doubleValue)
-        .toString(), is(equalTo(expected2)));
+        .toString()).isEqualTo(expected2);
   }
 
   @Test(expected = NullPointerException.class)
@@ -1471,7 +1508,7 @@ public class ObjectsTest
         .add("longValue", longValue)
         .add("floatValue", floatValue)
         .add("doubleValue", doubleValue)
-        .toString(), is(equalTo(expected)));
+        .toString()).isEqualTo(expected);
   }
 
   @Test(expected = NullPointerException.class)
